<resources>
    <string name="app_name">PolishMovies</string>
    <string name="all_movies">All</string>
    <string name="favourite_movies">Favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favourite</string>
    <string name="all_content">MoviesAll</string>
    <string name="movie_title">Movie Title</string>
    <string name="vote_average">8.0</string>
    <string name="year_release">Year of Release</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_year">Year</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="add_favourite">Add To Favourite</string>
    <string name="vote">8.0</string>
</resources>
