<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="MovieData"
            type="com.polish.polishmovies.model.MovieData" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_marginTop="56dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.DetailedFavourite">

            <ImageView
                android:id="@+id/detailedImagePosterId"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/thefather" />

            <TextView
                android:id="@+id/detailedTitleId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/righteous"
                android:text="@{MovieData.title}"
                android:textSize="@dimen/detail_textsize"
                app:layout_constraintBottom_toTopOf="@+id/detailedYearId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voteDetailedId"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/detailedYearId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/righteous"
                android:text="@{MovieData.releaseDate}"
                android:textSize="@dimen/release_date"
                app:layout_constraintBottom_toTopOf="@+id/detailedOverviewId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedTitleId"
                tools:text="@string/release_year" />

            <TextView
                android:id="@+id/detailedOverviewId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/cantarell"
                android:text="@{MovieData.overview}"
                android:textSize="@dimen/overview_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedYearId"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/voteDetailedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/righteous"
                android:text='@{""+MovieData.voteAverage}'
                android:textSize="@dimen/detail_textsize"
                app:layout_constraintEnd_toStartOf="@+id/detailedFavouriteId"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedImagePosterId"
                tools:text="@string/vote" />

            <ImageView
                android:id="@+id/detailedFavouriteId"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_favorite_blue"
                app:layout_constraintBottom_toBottomOf="@+id/voteDetailedId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/voteDetailedId"
                app:layout_constraintTop_toTopOf="@+id/voteDetailedId" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>